fixed height for field

--- a/sass/blocks/minesweeper.scss
+++ b/sass/blocks/minesweeper.scss
@@ -39,6 +39,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: 20px 0;
+    height: 500px;
   }
   &__item {
     background-color: #E0E0E0;
