--- a/sass/blocks/minesweeper.scss
+++ b/sass/blocks/minesweeper.scss
@@ -35,6 +35,22 @@
       font-weight: 700;
     }
   }
+  &__input {
+    label {
+      display: block;
+      font-size: 18px;
+      line-height: 24px;
+    }
+    input {
+      display: block;
+      width: 60px;
+      margin: 15px 0;
+      border: 1px solid #000;
+      border-radius: 5px;
+      padding: 5px 10px;
+      box-sizing: border-box;
+    }
+  }
   &__field {
     display: flex;
     flex-wrap: wrap;
