right click processing

--- a/sass/core.scss
+++ b/sass/core.scss
@@ -52,3 +52,11 @@ body {
     background: url('../img/bomb.svg') center / cover no-repeat;
   }
 }
+
+.flag {
+  span {
+    width: 26px;
+    height: 26px;
+    background: url('../img/flag.svg') center / cover no-repeat;
+  }
+}
