added block statistics

--- a/sass/blocks/minesweeper.scss
+++ b/sass/blocks/minesweeper.scss
@@ -50,6 +50,9 @@
       padding: 5px 10px;
       box-sizing: border-box;
     }
+    .minesweeper__input-name {
+      width: 175px;
+    }
   }
   &__field {
     display: flex;
